k8s/scylla/02-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eventrunner-grafana
  namespace: scylla
  annotations:
    cert-manager.io/cluster-issuer: "threadr-issuer"
    external-dns.alpha.kubernetes.io/hostname: "grafana.tunnel.threadr.ai"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    scylla-operator.scylladb.com/controller-name: grafana
    scylla-operator.scylladb.com/scylladbmonitoring-name: eventrunner
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.tunnel.threadr.ai
      http:
        paths:
          - backend:
              service:
                name: eventrunner-grafana
                port:
                  number: 443
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - grafana.tunnel.threadr.ai
      secretName: default-tunnel-threadr-ai-tls
status:
  loadBalancer:
    ingress:
      - ip: 10.43.0.3
